--- a/Wastewater.html
+++ b/Wastewater.html
@@ -12,7 +12,7 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
-    <meta name="description" content="Wastewater treatment equipment: MBBR media, diffusers, biofilters. Industrial supplier in India & UAE. Contact Chennai or Dubai teams." />
+    <meta name="description" content="Wastewater treatment equipment: MBBR media, diffusers, biofilters. Industrial supplier in India & UAE. Contact Chennai or UAE teams." />
     <meta name="keywords" content="wastewater treatment, MBBR media, diffusers, biofilter, Genoasis, water treatment equipment" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
@@ -918,7 +918,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center hero-content">
                     <h1 class="hero-title" data-aos="fade-up">Wastewater Treatment Equipment – India & UAE</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Advanced solutions for efficient water treatment across India and UAE. Browse <a href="Products.html">products</a> or <a href="contact.html">contact Chennai/Dubai</a>.</p>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Advanced solutions for efficient water treatment across India and UAE. Browse <a href="Products.html">products</a> or <a href="contact.html">contact Chennai/UAE</a>.</p>
                     <p class="lead" data-aos="fade-up" data-aos-delay="400">Genoasis provides comprehensive wastewater treatment solutions including MBBR media, diffusers, and filtration systems designed for optimal performance and long-term reliability in industrial and municipal applications.</p>
                 </div>
             </div>
@@ -1187,7 +1187,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="cta-title" data-aos="fade-up">Ready to Transform Your Water Treatment?</h2>
-                    <p class="cta-description" data-aos="fade-up" data-aos-delay="200">Contact our experts in Chennai or Dubai to discuss your wastewater treatment requirements and get a customized solution.</p>
+                    <p class="cta-description" data-aos="fade-up" data-aos-delay="200">Contact our experts in Chennai or UAE to discuss your wastewater treatment requirements and get a customized solution.</p>
                     <a href="contact.html" class="btn-cta" data-aos="fade-up" data-aos-delay="400">Get Expert Consultation</a>
                 </div>
             </div>
@@ -1209,7 +1209,7 @@
                         <li><a href="https://www.facebook.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-facebook-f"></span></a></li>
                         <li><a href="https://twitter.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-twitter"></span></a></li>
                         <li><a href="https://www.instagram.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-instagram"></span></a></li>
-                        <li><a href="https://www.linkedin.com/company/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
+                        <li><a href="https://www.linkedin.com/company/genoasis-technologies/?viewAsMember=true" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
                     </ul>
                 </div>
 
