--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="manifest" href="/site.webmanifest" />
 
-  <meta name="description" content="Industrial water treatment supplier in India and UAE. Genoasis provides FRP filters, RO membranes, pumps and chemicals. Contact our Chennai and Dubai teams." />
+  <meta name="description" content="Industrial water treatment supplier in India and UAE. Genoasis provides FRP filters, RO membranes, pumps and chemicals. Contact our Chennai and UAE teams." />
   <meta name="keywords" content="bootstrap, bootstrap4" />
 
 		<!-- Bootstrap CSS -->
@@ -1066,7 +1066,7 @@
 					<div class="col-lg-8 mx-auto text-center hero-content">
 						<h1 class="hero-title" data-aos="fade-up">Industrial Water Treatment Supplier – Genoasis India & UAE</h1>
 						<p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Innovative Solutions for a Sustainable Future</p>
-						<p class="lead" data-aos="fade-up" data-aos-delay="400">Genoasis is a water treatment trading company in UAE and India with teams in Chennai and Dubai. Driven by innovation to transform industries through cutting-edge water treatment, industrial applications, and laboratory solutions. Explore our <a href="Products.html">products</a> or <a href="contact.html">contact us</a> for a quote.</p>
+						<p class="lead" data-aos="fade-up" data-aos-delay="400">Genoasis is a water treatment trading company in UAE and India with teams in Chennai and UAE. Driven by innovation to transform industries through cutting-edge water treatment, industrial applications, and laboratory solutions. Explore our <a href="Products.html">products</a> or <a href="contact.html">contact us</a> for a quote.</p>
 					</div>
 				</div>
 			</div>
@@ -1254,7 +1254,7 @@
 								<div class="col-lg-3 col-md-6 mb-3">
 									<div class="feature-card">
 										<div class="feature-icon">
-										<img src="images/bag.svg" alt="Customized water treatment solutions Chennai Dubai – Genoasis" class="img-fluid">
+										<img src="images/bag.svg" alt="Customized water treatment solutions Chennai UAE – Genoasis" class="img-fluid">
 										</div>
 										<h4 class="feature-title">Customized Solutions</h4>
 										<p class="feature-text">We understand that each client's needs are unique. Our team works closely with you to provide tailored solutions.</p>
@@ -1452,7 +1452,7 @@
 							<li><a href="https://www.facebook.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-facebook-f"></span></a></li>
 							<li><a href="https://twitter.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-twitter"></span></a></li>
 							<li><a href="https://www.instagram.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-instagram"></span></a></li>
-							<li><a href="https://www.linkedin.com/company/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
+							<li><a href="https://www.linkedin.com/company/genoasis-technologies/?viewAsMember=true" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
 						</ul>
 					</div>
 
