--- a/atmospheric-water-generators.html
+++ b/atmospheric-water-generators.html
@@ -658,7 +658,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center hero-content">
                     <h1 class="hero-title" data-aos="fade-up">Atmospheric Water Generators – India & UAE</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Drinking water from air technology across India and UAE. Explore <a href="Products.html">products</a> or <a href="contact.html">contact Chennai/Dubai</a>.</p>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Drinking water from air technology across India and UAE. Explore <a href="Products.html">products</a> or <a href="contact.html">contact Chennai/UAE</a>.</p>
                     <p class="lead text-white" data-aos="fade-up" data-aos-delay="400">Our atmospheric water generators rely on atmospheric water vapour to create water, which means there is limitless potential to generate unlimited drinking water forever.</p>
                     <div class="mt-4" data-aos="fade-up" data-aos-delay="600">
                     </div>
@@ -976,7 +976,7 @@
                             <li><a href="https://www.facebook.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-facebook-f"></span></a></li>
                             <li><a href="https://twitter.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-twitter"></span></a></li>
                             <li><a href="https://www.instagram.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-instagram"></span></a></li>
-                            <li><a href="https://www.linkedin.com/company/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
+                            <li><a href="https://www.linkedin.com/company/genoasis-technologies/?viewAsMember=true" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
                         </ul>
                     </div>
                 </div>
