--- a/chemicals.html
+++ b/chemicals.html
@@ -12,8 +12,8 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
-    <meta name="description" content="Specialty and commercial water treatment chemicals for RO and wastewater. Serving India and UAE. Get expert advice from our Chennai and Dubai teams." />
-    <meta name="keywords" content="water treatment chemicals, RO antiscalants, wastewater chemicals, industrial chemicals, India, UAE, Chennai, Dubai" />
+    <meta name="description" content="Specialty and commercial water treatment chemicals for RO and wastewater. Serving India and UAE. Get expert advice from our Chennai and UAE teams." />
+    <meta name="keywords" content="water treatment chemicals, RO antiscalants, wastewater chemicals, industrial chemicals, India, UAE, Chennai, UAE" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
     <script>
@@ -907,7 +907,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center hero-content">
                     <h1 class="hero-title" data-aos="fade-up">Water Treatment Chemicals for RO & Wastewater – India & UAE</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Supplying specialty chemicals across Chennai, India and Dubai, UAE. Need help choosing chemicals? <a href="contact.html">Contact our experts</a>.</p>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Supplying specialty chemicals across Chennai, India and UAE, UAE. Need help choosing chemicals? <a href="contact.html">Contact our experts</a>.</p>
                 </div>
             </div>
         </div>
@@ -1499,7 +1499,7 @@
                         <li><a href="https://www.facebook.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-facebook-f"></span></a></li>
                         <li><a href="https://twitter.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-twitter"></span></a></li>
                         <li><a href="https://www.instagram.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-instagram"></span></a></li>
-                        <li><a href="https://www.linkedin.com/company/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
+                        <li><a href="https://www.linkedin.com/company/genoasis-technologies/?viewAsMember=true" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
                     </ul>
                 </div>
 
