--- a/contact.html
+++ b/contact.html
@@ -878,7 +878,7 @@
             <li><a href="https://www.facebook.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-facebook-f"></span></a></li>
             <li><a href="https://twitter.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-twitter"></span></a></li>
             <li><a href="https://www.instagram.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-instagram"></span></a></li>
-            <li><a href="https://www.linkedin.com/company/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
+            <li><a href="https://www.linkedin.com/company/genoasis-technologies/?viewAsMember=true" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
           </ul>
         </div>
 
