--- a/disinfectants.html
+++ b/disinfectants.html
@@ -12,7 +12,7 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
-    <meta name="description" content="Disinfection systems for water treatment: UV sterilizers and ozone generators. Industrial supplier in India & UAE. Contact our Chennai and Dubai teams." />
+    <meta name="description" content="Disinfection systems for water treatment: UV sterilizers and ozone generators. Industrial supplier in India & UAE. Contact our Chennai and UAE teams." />
     <meta name="keywords" content="UV sterilizer, ozone generator, water disinfection, Genoasis, water treatment" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
@@ -672,7 +672,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center hero-content">
                     <h1 class="hero-title" data-aos="fade-up">Disinfection Systems – India & UAE</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">UV sterilizers and ozone generators for water treatment across India and UAE. View <a href="Products.html">products</a> or <a href="contact.html">contact Chennai/Dubai</a>.</p>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">UV sterilizers and ozone generators for water treatment across India and UAE. View <a href="Products.html">products</a> or <a href="contact.html">contact Chennai/UAE</a>.</p>
                     <p class="lead" data-aos="fade-up" data-aos-delay="400">We offer advanced disinfection solutions for a wide range of applications, ensuring high-efficiency water treatment. Our UV sterilizers and ozone generators are designed to effectively eliminate harmful microorganisms and contaminants from water, providing safe and clean water for industrial, municipal, and commercial uses.</p>
                 </div>
             </div>
@@ -784,7 +784,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="cta-title" data-aos="fade-up">Ready to Enhance Your Water Disinfection?</h2>
-                    <p class="cta-description" data-aos="fade-up" data-aos-delay="200">Contact our experts in Chennai or Dubai to discuss your disinfection requirements and get a customized solution.</p>
+                    <p class="cta-description" data-aos="fade-up" data-aos-delay="200">Contact our experts in Chennai or UAE to discuss your disinfection requirements and get a customized solution.</p>
                     <a href="contact.html" class="btn-cta" data-aos="fade-up" data-aos-delay="400">Get Expert Consultation</a>
                 </div>
             </div>
@@ -806,7 +806,7 @@
                         <li><a href="https://www.facebook.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-facebook-f"></span></a></li>
                         <li><a href="https://twitter.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-twitter"></span></a></li>
                         <li><a href="https://www.instagram.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-instagram"></span></a></li>
-                        <li><a href="https://www.linkedin.com/company/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
+                        <li><a href="https://www.linkedin.com/company/genoasis-technologies/?viewAsMember=true" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
                     </ul>
                 </div>
 
