--- a/festo-products.html
+++ b/festo-products.html
@@ -12,7 +12,7 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
-    <meta name="description" content="Festo pneumatic products: cylinders, valves, fittings, air preparation units. Industrial supplier in India & UAE. Contact Chennai or Dubai." />
+    <meta name="description" content="Festo pneumatic products: cylinders, valves, fittings, air preparation units. Industrial supplier in India & UAE. Contact Chennai or UAE." />
     <meta name="keywords" content="Festo, pneumatic cylinders, solenoid valves, push-in fittings, air preparation, Genoasis" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
@@ -665,7 +665,7 @@
             <div class="row">
                 <div class="col-lg-10 mx-auto text-center hero-content">
                     <h1 class="hero-title" data-aos="fade-up">Festo Pneumatic Products – India & UAE</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Complete range of pneumatic components across India and UAE. Browse <a href="Products.html">products</a> or <a href="contact.html">contact Chennai/Dubai</a>.</p>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Complete range of pneumatic components across India and UAE. Browse <a href="Products.html">products</a> or <a href="contact.html">contact Chennai/UAE</a>.</p>
                     <p class="lead" data-aos="fade-up" data-aos-delay="400">Click on any category to explore our comprehensive range of Festo products</p>
                 </div>
             </div>
@@ -824,7 +824,7 @@
                         <li><a href="https://www.facebook.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-facebook-f"></span></a></li>
                         <li><a href="https://twitter.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-twitter"></span></a></li>
                         <li><a href="https://www.instagram.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-instagram"></span></a></li>
-                        <li><a href="https://www.linkedin.com/company/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
+                        <li><a href="https://www.linkedin.com/company/genoasis-technologies/?viewAsMember=true" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
                     </ul>
                 </div>
 
