--- a/filters.html
+++ b/filters.html
@@ -12,7 +12,7 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
-    <meta name="description" content="Industrial filter cartridges and housings for pure water systems. Supplier in India and UAE. Get support from our Chennai and Dubai teams." />
+    <meta name="description" content="Industrial filter cartridges and housings for pure water systems. Supplier in India and UAE. Get support from our Chennai and UAE teams." />
     <meta name="keywords" content="bootstrap, bootstrap4" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
@@ -941,7 +941,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center hero-content">
                     <h1 class="hero-title" data-aos="fade-up">Filter Cartridges & Housings – India & UAE</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">High‑performance filtration for industrial and commercial applications across India and UAE. Explore our <a href="Products.html">products</a> or <a href="contact.html">contact our Chennai and Dubai teams</a>.</p>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">High‑performance filtration for industrial and commercial applications across India and UAE. Explore our <a href="Products.html">products</a> or <a href="contact.html">contact our Chennai and UAE teams</a>.</p>
                 </div>
             </div>
         </div>
@@ -955,7 +955,7 @@
                 <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
                         <h2 class="section-title mb-3">Filters & Filter Housings</h2>
-                        <p class="lead mb-4">Genoasis supplies replacement cartridges and bag filters for industries such as Oil & Gas, Food & Beverage, and Pharmaceuticals. We offer a complete range of filtration products and systems for pure water purification. To meet restocking needs, we provide competitive supply agreements and express delivery services as needed. We supply across India and UAE from Chennai and Dubai — browse our <a href="Products.html">full product range</a>.</p>
+                        <p class="lead mb-4">Genoasis supplies replacement cartridges and bag filters for industries such as Oil & Gas, Food & Beverage, and Pharmaceuticals. We offer a complete range of filtration products and systems for pure water purification. To meet restocking needs, we provide competitive supply agreements and express delivery services as needed. We supply across India and UAE from Chennai and UAE — browse our <a href="Products.html">full product range</a>.</p>
                         <p class="mb-4">We offer a variety of Filtration Cartridge Housing, including String Wound and Melt Blown Filtration Cartridges, designed to meet the needs of various industrial filtration applications. These cartridges are engineered for superior performance, durability, and efficiency.</p>
 
                         <h3 class="mb-3">Features & Benefits</h3>
@@ -1071,7 +1071,7 @@
                         <li><a href="https://www.facebook.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-facebook-f"></span></a></li>
                         <li><a href="https://twitter.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-twitter"></span></a></li>
                         <li><a href="https://www.instagram.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-instagram"></span></a></li>
-                        <li><a href="https://www.linkedin.com/company/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
+                        <li><a href="https://www.linkedin.com/company/genoasis-technologies/?viewAsMember=true" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
                     </ul>
                 </div>
 
