--- a/frpmedia.html
+++ b/frpmedia.html
@@ -12,8 +12,8 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
-    <meta name="description" content="RO pressure vessels and FRP media filter solutions. Industrial supplier across India and UAE. Contact our Chennai and Dubai teams." />
-    <meta name="keywords" content="RO pressure vessels, FRP filters, FRP media filters, water treatment equipment, India, UAE, Chennai, Dubai" />
+    <meta name="description" content="RO pressure vessels and FRP media filter solutions. Industrial supplier across India and UAE. Contact our Chennai and UAE teams." />
+    <meta name="keywords" content="RO pressure vessels, FRP filters, FRP media filters, water treatment equipment, India, UAE, Chennai, UAE" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
     <script>
@@ -1193,7 +1193,7 @@
                         <li><a href="https://www.facebook.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-facebook-f"></span></a></li>
                         <li><a href="https://twitter.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-twitter"></span></a></li>
                         <li><a href="https://www.instagram.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-instagram"></span></a></li>
-                        <li><a href="https://www.linkedin.com/company/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
+                        <li><a href="https://www.linkedin.com/company/genoasis-technologies/?viewAsMember=true" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
                     </ul>
                 </div>
 
