--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="manifest" href="/site.webmanifest" />
 
-  <meta name="description" content="Industrial water treatment solutions by Genoasis across India and UAE. FRP filters, RO vessels, membranes, pumps and chemicals. Chennai and Dubai support." />
-  <meta name="keywords" content="water treatment, industrial equipment, FRP filters, RO vessels, membranes, pumps, chemicals, India, UAE, Chennai, Dubai" />
+  <meta name="description" content="Industrial water treatment solutions by Genoasis across India and UAE. FRP filters, RO vessels, membranes, pumps and chemicals. Chennai and UAE support." />
+  <meta name="keywords" content="water treatment, industrial equipment, FRP filters, RO vessels, membranes, pumps, chemicals, India, UAE, Chennai, UAE" />
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://genoasis.com/" />
   <meta property="og:title" content="Industrial Water Treatment Solutions – Genoasis India & UAE" />
-  <meta property="og:description" content="Industrial water treatment solutions by Genoasis across India and UAE. FRP filters, RO vessels, membranes, pumps and chemicals. Chennai and Dubai support." />
+  <meta property="og:description" content="Industrial water treatment solutions by Genoasis across India and UAE. FRP filters, RO vessels, membranes, pumps and chemicals. Chennai and UAE support." />
   <meta property="og:image" content="https://genoasis.com/images/logo.png" />
   <meta property="og:site_name" content="Genoasis" />
   
@@ -40,7 +40,7 @@
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://genoasis.com/" />
   <meta property="twitter:title" content="Industrial Water Treatment Solutions – Genoasis India & UAE" />
-  <meta property="twitter:description" content="Industrial water treatment solutions by Genoasis across India and UAE. FRP filters, RO vessels, membranes, pumps and chemicals. Chennai and Dubai support." />
+  <meta property="twitter:description" content="Industrial water treatment solutions by Genoasis across India and UAE. FRP filters, RO vessels, membranes, pumps and chemicals. Chennai and UAE support." />
   <meta property="twitter:image" content="https://genoasis.com/images/logo.png" />
   
   <!-- Canonical URL -->
@@ -83,7 +83,7 @@
       }
     ],
     "sameAs": [
-      "https://www.linkedin.com/company/genoasis",
+      "https://www.linkedin.com/company/genoasis-technologies/?viewAsMember=true",
       "https://www.facebook.com/genoasis"
     ],
     "hasOfferCatalog": {
@@ -535,7 +535,7 @@
 				<div class="col-lg-7">
 					<h2 class="mb-4">Innovative Water Treatment Solutions for Industrial Excellence</h2>
 					
-					<p class="mb-4">Genoasis is a leading provider of industrial water treatment solutions across India and the UAE. Our comprehensive range of products includes advanced FRP filters, RO vessels, membrane technologies, industrial pumps, and specialized water treatment chemicals. With offices in Chennai and Dubai, we serve diverse industries including power plants, oil & gas, food processing, pharmaceuticals, and municipal water systems.</p>
+					<p class="mb-4">Genoasis is a leading provider of industrial water treatment solutions across India and the UAE. Our comprehensive range of products includes advanced FRP filters, RO vessels, membrane technologies, industrial pumps, and specialized water treatment chemicals. With offices in Chennai and UAE, we serve diverse industries including power plants, oil & gas, food processing, pharmaceuticals, and municipal water systems.</p>
 
 					<h3 class="mb-3">Comprehensive Water Treatment Products</h3>
 					<p class="mb-4">Our product portfolio encompasses all aspects of water treatment infrastructure. We supply high-performance RO pressure vessels constructed from fiber-reinforced plastic (FRP) for maximum durability and corrosion resistance. Our membrane products include reverse osmosis, ultrafiltration, and nanofiltration membranes from leading manufacturers. We also provide a complete range of water treatment pumps including centrifugal, submersible, and metering pumps designed for demanding industrial applications.</p>
@@ -744,7 +744,7 @@
 							<li><a href="https://www.facebook.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-facebook-f"></span></a></li>
 							<li><a href="https://twitter.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-twitter"></span></a></li>
 							<li><a href="https://www.instagram.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-instagram"></span></a></li>
-							<li><a href="https://www.linkedin.com/company/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
+							<li><a href="https://www.linkedin.com/company/genoasis-technologies/?viewAsMember=true" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
 						</ul>
 					</div>
 
