--- a/instruments.html
+++ b/instruments.html
@@ -12,7 +12,7 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
-    <meta name="description" content="Instrumentation and lab apparatus for water treatment: sensors, transmitters, analyzers and control. Supplier in India & UAE. Contact Chennai or Dubai." />
+    <meta name="description" content="Instrumentation and lab apparatus for water treatment: sensors, transmitters, analyzers and control. Supplier in India & UAE. Contact Chennai or UAE." />
     <meta name="keywords" content="water quality sensors, flow meters, lab apparatus, instrumentation, Genoasis" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
@@ -771,7 +771,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center hero-content">
                     <h1 class="hero-title" data-aos="fade-up">Instrumentation & Lab Apparatus – India & UAE</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Precision sensors and control systems for water treatment across India and UAE. Explore <a href="Products.html">products</a> or <a href="contact.html">contact Chennai/Dubai</a>.</p>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Precision sensors and control systems for water treatment across India and UAE. Explore <a href="Products.html">products</a> or <a href="contact.html">contact Chennai/UAE</a>.</p>
                     <p class="lead" data-aos="fade-up" data-aos-delay="400">We offer a comprehensive range of sensors, transmitters, and automated control systems to monitor, regulate, and optimize water and wastewater treatment processes. Our instrumentation solutions ensure accuracy and reliability in every phase of water treatment.</p>
                 </div>
             </div>
@@ -976,7 +976,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="cta-title" data-aos="fade-up">Ready to Optimize Your Water Treatment?</h2>
-                    <p class="cta-description" data-aos="fade-up" data-aos-delay="200">Contact our teams in Chennai or Dubai to discuss your instrumentation requirements and get a customized solution.</p>
+                    <p class="cta-description" data-aos="fade-up" data-aos-delay="200">Contact our teams in Chennai or UAE to discuss your instrumentation requirements and get a customized solution.</p>
                     <a href="contact.html" class="btn-cta" data-aos="fade-up" data-aos-delay="400">Get Expert Consultation</a>
                 </div>
             </div>
@@ -998,7 +998,7 @@
                         <li><a href="https://www.facebook.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-facebook-f"></span></a></li>
                         <li><a href="https://twitter.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-twitter"></span></a></li>
                         <li><a href="https://www.instagram.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-instagram"></span></a></li>
-                        <li><a href="https://www.linkedin.com/company/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
+                        <li><a href="https://www.linkedin.com/company/genoasis-technologies/?viewAsMember=true" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
                     </ul>
                 </div>
 
