--- a/sandmedia.html
+++ b/sandmedia.html
@@ -13,7 +13,7 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
     <meta name="description" content="Advanced Instrumentation & Lab Apparatus by Genoasis - Precision sensors, transmitters, and control systems for water treatment optimization" />
-    <meta name="keywords" content="sand media, ion exchange resins, silica sand, activated carbon, filtration media, water treatment, India, UAE, Chennai, Dubai" />
+    <meta name="keywords" content="sand media, ion exchange resins, silica sand, activated carbon, filtration media, water treatment, India, UAE, Chennai, UAE" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
     <script>
@@ -817,7 +817,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center hero-content">
                     <h1 class="hero-title" data-aos="fade-up">Sand Media & Ion Exchange Resins – India & UAE</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">High‑performance media for municipal and industrial water treatment across India and UAE. Browse our <a href="Products.html">products</a> or <a href="contact.html">contact our Chennai and Dubai teams</a>.</p>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">High‑performance media for municipal and industrial water treatment across India and UAE. Browse our <a href="Products.html">products</a> or <a href="contact.html">contact our Chennai and UAE teams</a>.</p>
                 </div>
             </div>
         </div>
@@ -830,7 +830,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content-card" data-aos="fade-up">
-                        <p class="lead mb-0">We are a leading supplier and trader of high‑quality industrial filtration materials, including silica sand, ion‑exchange resins, activated carbon, anthracite, and advanced filter media. Our products are designed to meet the highest standards in water treatment, ensuring optimal performance across a variety of applications, from municipal and industrial water purification to specialized filtration systems. We supply across India & UAE via our Chennai and Dubai teams.</p>
+                        <p class="lead mb-0">We are a leading supplier and trader of high‑quality industrial filtration materials, including silica sand, ion‑exchange resins, activated carbon, anthracite, and advanced filter media. Our products are designed to meet the highest standards in water treatment, ensuring optimal performance across a variety of applications, from municipal and industrial water purification to specialized filtration systems. We supply across India & UAE via our Chennai and UAE teams.</p>
                     </div>
                 </div>
             </div>
@@ -1147,7 +1147,7 @@
                         <li><a href="https://www.facebook.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-facebook-f"></span></a></li>
                         <li><a href="https://twitter.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-twitter"></span></a></li>
                         <li><a href="https://www.instagram.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-instagram"></span></a></li>
-                        <li><a href="https://www.linkedin.com/company/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
+                        <li><a href="https://www.linkedin.com/company/genoasis-technologies/?viewAsMember=true" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
                     </ul>
                 </div>
 
