--- a/valves.html
+++ b/valves.html
@@ -674,7 +674,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center hero-content">
                     <h1 class="hero-title" data-aos="fade-up">Valves, Pipes & Fittings – India & UAE</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">High-quality solutions for water treatment across India and UAE. View <a href="Products.html">products</a> or <a href="contact.html">contact Chennai/Dubai</a>.</p>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">High-quality solutions for water treatment across India and UAE. View <a href="Products.html">products</a> or <a href="contact.html">contact Chennai/UAE</a>.</p>
                     <p class="lead" data-aos="fade-up" data-aos-delay="400">Genoasis Technologies offers an extensive range of high-quality pipes, fittings, and valves designed to ensure seamless fluid management in water and wastewater systems. Our products guarantee durability, reliability, and superior performance in all phases of water treatment.</p>
                 </div>
             </div>
@@ -770,7 +770,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <h2 class="cta-title" data-aos="fade-up">Ready to Transform Your Water Treatment?</h2>
-                    <p class="cta-description" data-aos="fade-up" data-aos-delay="200">Contact our experts in Chennai or Dubai to discuss your valve and fitting requirements and get a customized solution.</p>
+                    <p class="cta-description" data-aos="fade-up" data-aos-delay="200">Contact our experts in Chennai or UAE to discuss your valve and fitting requirements and get a customized solution.</p>
                     <a href="contact.html" class="btn-cta" data-aos="fade-up" data-aos-delay="400">Get Expert Consultation</a>
                 </div>
             </div>
@@ -792,7 +792,7 @@
                         <li><a href="https://www.facebook.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-facebook-f"></span></a></li>
                         <li><a href="https://twitter.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-twitter"></span></a></li>
                         <li><a href="https://www.instagram.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-instagram"></span></a></li>
-                        <li><a href="https://www.linkedin.com/company/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
+                        <li><a href="https://www.linkedin.com/company/genoasis-technologies/?viewAsMember=true" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
                     </ul>
                 </div>
 
