--- a/Products.html
+++ b/Products.html
@@ -12,8 +12,8 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<link rel="manifest" href="/site.webmanifest" />
-    <meta name="description" content="FRP filters, RO vessels, membranes, pumps and chemicals. Industrial supplier in India and UAE. Browse products and contact Chennai or Dubai teams." />
-    <meta name="keywords" content="water treatment products, FRP filters, RO vessels, membranes, pumps, chemicals, industrial equipment, India, UAE, Chennai, Dubai" />
+    <meta name="description" content="FRP filters, RO vessels, membranes, pumps and chemicals. Industrial supplier in India and UAE. Browse products and contact Chennai or UAE teams." />
+    <meta name="keywords" content="water treatment products, FRP filters, RO vessels, membranes, pumps, chemicals, industrial equipment, India, UAE, Chennai, UAE" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
     <script>
@@ -1057,7 +1057,7 @@
             <div class="row">
                 <div class="col-12 text-center mb-5">
                     <h2 class="display-4 fw-bold" data-aos="fade-up">Industrial Water Treatment Products – India & UAE</h2>
-                    <p class="lead text-muted" data-aos="fade-up" data-aos-delay="200">Explore FRP filters, RO vessels, membranes, pumps and chemicals. Need pricing? <a href="contact.html">Contact Chennai or Dubai</a>.</p>
+                    <p class="lead text-muted" data-aos="fade-up" data-aos-delay="200">Explore FRP filters, RO vessels, membranes, pumps and chemicals. Need pricing? <a href="contact.html">Contact Chennai or UAE</a>.</p>
                 </div>
             </div>
             
@@ -1373,7 +1373,7 @@
                         <li><a href="https://www.facebook.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-facebook-f"></span></a></li>
                         <li><a href="https://twitter.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-twitter"></span></a></li>
                         <li><a href="https://www.instagram.com/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-instagram"></span></a></li>
-                        <li><a href="https://www.linkedin.com/company/genoasis" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
+                        <li><a href="https://www.linkedin.com/company/genoasis-technologies/?viewAsMember=true" target="_blank" rel="noopener"><span class="fa fa-brands fa-linkedin"></span></a></li>
                     </ul>
                 </div>
 
